<resources>
    <string name="app_name">ATM Consultoria</string>
    <string name="empresa" />
    <string name="empresa_detalhes">Sobre a empresa</string>
    <string name="empresa_descricao">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vel malesuada dui. Phasellus ultrices commodo libero fermentum tincidunt. Pellentesque et fringilla augue, a pulvinar augue. Duis dignissim justo sit amet velit tincidunt venenatis. Nunc non nulla sed neque semper semper. Maecenas a leo elit. Nam feugiat urna ut ligula commodo, sit amet pretium ex dapibus. Curabitur lorem urna, rhoncus sit amet lectus hendrerit, scelerisque ultrices velit. Integer euismod ipsum sed felis semper fermentum. Pellentesque dignissim metus a ex dapibus mattis.  Aliquam erat volutpat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse sit amet felis ipsum. Pellentesque vitae semper nisl, nec gravida arcu. Aenean blandit diam ac velit commodo, non eleifend leo hendrerit. Maecenas enim est, gravida condimentum suscipit eleifend, imperdiet vitae ante. Nam eget eros blandit, venenatis quam ac, fringilla urna. Aliquam in odio eu elit auctor ullamcorper. Curabitur vel accumsan ante. Sed imperdiet nisi non lorem blandit, quis lobortis urna varius. Nunc in massa turpis. Suspendisse pellentesque sem at lectus sollicitudin congue. Vivamus sed convallis metus. Vivamus quis leo et nisl sagittis gravida id ut purus.  Vivamus volutpat lacus ac dolor sodales, vel rhoncus turpis ornare. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum tortor tortor, bibendum vehicula egestas ut, laoreet sit amet enim. Suspendisse vitae neque mauris. Integer ac enim ut est maximus accumsan at non neque. Nulla facilisi. Vestibulum in massa sed nunc dignissim convallis in a justo. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce lobortis orci sapien, eu mattis urna sodales non. Maecenas sollicitudin ac metus ac aliquet. Morbi sagittis ipsum vitae mi condimentum pretium. Integer ullamcorper a sapien et maximus. Nunc aliquet ipsum eget sollicitudin ullamcorper. Vivamus vestibulum rutrum nulla sed placerat. Praesent leo eros, tristique non mattis in, placerat non nulla. Aliquam erat volutpat.  In sed nisi a sem finibus ultricies nec vitae mauris. Sed elementum tincidunt odio, et mattis libero. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam pharetra iaculis velit, id blandit nunc posuere a. Nulla facilisi. Proin ultricies ex at posuere condimentum. In imperdiet justo metus, iaculis dignissim mauris suscipit nec. In convallis efficitur arcu, eu pretium arcu ornare a. In hac habitasse platea dictumst. Integer quis risus ac felis fringilla congue sit amet et urna.  Donec ac sem tortor. Mauris posuere consectetur augue, quis ornare orci tincidunt et. Suspendisse ullamcorper ac lorem et ornare. Nullam vestibulum malesuada venenatis. In elementum non sem quis accumsan. Quisque ut purus eget lorem finibus consequat in eu nisi. Donec vitae iaculis felis. Vestibulum facilisis ac nisi ut varius. Morbi luctus lectus nunc. Suspendisse suscipit nec dolor id aliquam. Ut sed quam et neque eleifend euismod vel sit amet velit. Pellentesque pretium lobortis arcu pulvinar blandit. Suspendisse potenti. Etiam ultricies at massa id sollicitudin. Sed ex nulla, congue at luctus nec, cursus nec turpis. Duis elementum mauris non vulputate fermentum.</string>
    <string name="servico_detalhes">Serviços</string>
    <string name="texto_consultoria">Consultoria</string>
    <string name="texto_processos">Processos</string>
    <string name="texto_acompanhamento_projeto">Acompanhamento e projetos</string>
    <string name="texto_tres_pontos">...</string>
    <string name="titulo_cliente">Nossos Clientes</string>
    <string name="texto_empresa1">Empresa de desenvolvimento de sistemas</string>
    <string name="texto_empresa2">Empresa de auditoria</string>
    <string name="titulo_contato">Contato</string>
    <string name="email_contato">E-mail: consultoria@atm.com.br</string>
</resources>
